k8s/kube/andes-stage/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-andes
  namespace: andes-stage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: "dns01"
    certmanager.k8s.io/acme-dns01-provider: "route53"
    ingress.kubernetes.io/proxy-connect-timeout: "600"
    ingress.kubernetes.io/proxy-read-timeout: "600"
    ingress.kubernetes.io/proxy-send-timeout: "600"
    ingress.kubernetes.io/send-timeout: "600"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - andes-stage.osacontrol.com
    - andes-stage.osacontrol.cl
    secretName: letsencrypt-prod
  rules:
  - host: andes-stage.osacontrol.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:        
            name: osa-andes-service
            port: 
              number: 3030
  - host: andes-stage.osacontrol.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: osa-andes-service
            port: 
              number: 3030
